<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textCostOfCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="35dp"
        android:text="@string/CostOfCar"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <TextView
        android:id="@+id/textDownPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="6dp"
        android:text="@string/DownPayment"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/editText2"
        app:layout_constraintEnd_toStartOf="@+id/editText2" />

    <TextView
        android:id="@+id/textAPR"
        android:layout_width="34dp"
        android:layout_height="26dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="48dp"
        android:text="@string/APR"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup2"
        app:layout_constraintEnd_toStartOf="@+id/editMonthlyPayment"
        app:layout_constraintStart_toStartOf="@+id/seekBarMonths"
        app:layout_constraintTop_toTopOf="@+id/textDownPayment" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3">

        <RadioButton
            android:id="@+id/radLease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_weight="1"
            android:text="@string/Lease" />

        <RadioButton
            android:id="@+id/radBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:text="@string/Buy" />

    </RadioGroup>

    <SeekBar
        android:id="@+id/seekBarMonths"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="63dp"
        android:max="60"
        android:progress="1"
        android:progressTint="#4CAF50"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/textMonthlyPayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioGroup2"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textLengthOfLoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LengthOfLoan"
        app:layout_constraintBaseline_toBaselineOf="@+id/textMonthNum"
        app:layout_constraintEnd_toEndOf="@+id/seekBarMonths"
        app:layout_constraintStart_toStartOf="@+id/seekBarMonths" />

    <TextView
        android:id="@+id/textMonthNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="115dp"
        android:text="1"
        app:layout_constraintBottom_toTopOf="@+id/seekBarMonths"
        app:layout_constraintEnd_toEndOf="@+id/seekBarMonths"
        app:layout_constraintStart_toStartOf="@+id/textLengthOfLoan" />

    <TextView
        android:id="@+id/textMonthlyPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="@string/MonthlyPayment"
        app:layout_constraintBottom_toTopOf="@+id/editMonthlyPayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editMonthlyPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="102dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/butCalcPayment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/butCalcPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:text="@string/CalcPayment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>